# space_invaders_assignment

./: README.md  main.py  pyproject.toml
core/: exceptions.py  mixins.py  types.py  utils.py
invaders/: ascii.py  base.py  identified.py
maps/: ascii.py  base.py
radars/: area.py  base.py  spherical.py
scanners/: base.py  basic.py
tests/: test_frame_coords.py  test_invaders.py  test_maps.py  test_mixins.py  test_radars.py  test_scanners.py
